--- a/server/views/layouts/dashboard.html
+++ b/server/views/layouts/dashboard.html
@@ -20,14 +20,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/dashboard">Node Stripe Membership App</a>
+          <a class="navbar-brand" href="/dashboard">Tiburon Chamber Membership Dashboard</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li {%if path == '/dashboard'%}class="active"{%endif%}><a href="/dashboard">Home</a></li>
             <li {%if path == '/profile'%}class="active"{%endif%}><a href="/profile">Profile</a></li>
             <li {%if path == '/billing'%}class="active"{%endif%}><a href="/billing">Billing</a></li>
-            <li><a href="https://github.com/eddywashere/node-stripe-membership-saas">Fork Me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/logout">Logout</a></li>
