--- a/server/views/dashboard/billing.html
+++ b/server/views/dashboard/billing.html
@@ -36,7 +36,7 @@
         <div class="form-group">
           <label class="col-sm-3 control-label">Card Number</label>
           <div class="col-sm-4">
-            <input id="card-num" type="text" class="form-control">
+            <input id="card-num" type="text" class="form-control" maxlength="16">
           </div>
         </div>
         <div class="form-group">
