--- a/server/views/layouts/application.html
+++ b/server/views/layouts/application.html
@@ -19,12 +19,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/dashboard">Node Stripe Membership App</a>
+          <a class="navbar-brand" href="/dashboard">Tiburon Chamber Membership Dashboard</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li {%if path == '/dashboard'%}class="active"{%endif%}><a href="/dashboard">Home</a></li>
-            <li><a href="https://github.com/eddywashere/node-stripe-membership-saas">Fork Me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li {%if path == '/'%}class="active"{%endif%}><a href="/">Log in</a></li>
